--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.1.6",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/elements": "^16.1.6",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.1.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@igniteui/material-icons-extended": "^2.10.0",
+    "@ng-icons/bootstrap-icons": "^25.1.0",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/ionicons": "^25.1.0",
+    "@popperjs/core": "^2.11.8",
+    "fflate": "^0.7.3",
+    "firebase": "^9.23.0",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^16.0.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -26,13 +37,20 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@igniteui/angular-schematics": "~16.0.1200",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.4",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   }
 }
